<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/year" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:text="@string/salary" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

</LinearLayout>