<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SalaryListActivity" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_alignParentTop="true" >

        <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            tools:listItem="android.R.layout.simple_spinner_item" />

        <EditText
            android:id="@+id/salaryInput"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/salary"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/addReplaceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickAddReplace"
            android:text="@string/add_replace" />
    </LinearLayout>

    <TextView
        android:id="@+id/emptyMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/header"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        android:text="@string/salary_list_empty"
        android:textSize="14sp" />

    <ListView
        android:id="@+id/salaryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/header" >
    </ListView>

</RelativeLayout>